# pinocchio_catkin

./: .travis.rosinstall  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: pinocchio.cmake  pinocchio.cmake.in
