<?xml version="1.0"?>
<package format="2">
  <name>pinocchio</name>
  <version>2.1.3</version>
  <description>A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives - wrapped for catkin.</description>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/stack-of-tasks/pinocchio</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>git</build_depend>
  <depend>python</depend>
  <depend>python-numpy</depend>
  <depend>liburdfdom-dev</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>eigenpy</depend>
</package>
